k8s/angular-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-demo-app
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: angular-demo-app
  template:
    metadata:
      labels:
        app: angular-demo-app
    spec:
      containers:
        - name: angular-demo-app
          image: immanuel2305/angular-demo-app:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "200Mi"
              cpu: "250m"
