k8s/spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-demo-app
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: spring-demo-app
  template:
    metadata:
      labels:
        app: spring-demo-app
    spec:
      containers:
        - name: spring-demo-container
          image: immanuel2305/spring-demo-app:latest
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              memory: "100Mi"
              cpu: "150m"
            limits:
              memory: "200Mi"
              cpu: "300m"
