k8s/spring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-demo-service
spec:
  selector:
    app: spring-demo-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
